# hexapod_ws

./: .gitignore  CHANGES_v2.md  CLAUDE.md  LICENSE  PHASE.md  PHASE_NOTES.md  README.md  hexapod_plan.code-workspace
docs/: 00_conventions.md  01_hardware_change_workflow.md  phase_0_progress.md  phase_0_setup.md  phase_1_ros2_basics.md  phase_2_description.md  phase_2_progress.md  phase_3_gazebo.md  phase_3_progress.md  phase_3_stage_D_tryout.md  phase_4_controllers_explained.md  phase_4_launch_explained.md  phase_4_progress.md  phase_4_ros2_control.md  phase_4_stage_E_test_commands.md  phase_4_stage_F_test_commands.md  phase_5_gait_explained.md  phase_5_ik_explained.md  phase_5_kinematics_gait.md  phase_5_progress.md  phase_5_stage_C_test_commands.md  phase_5_stage_D_test_commands.md  phase_5_stage_E_test_commands.md  phase_5_stage_F_test_commands.md  phase_5_stage_G_test_commands.md  phase_5_stage_H_test_commands.md  phase_6_progress.md  phase_6_stage_A_test_commands.md  phase_6_teleop.md  phase_6_teleop_handoff.md  phase_7_hw_port_handoff.md
docs_raspi/: HANDOVER_STAGE_E2.md  _archive_phase_7_brainstorm.md  _archive_servo_real_cal_stage_f_femur_wasserwaage_plan.md  _archive_servo_real_cal_stage_f_femur_wasserwaage_test_commands.md  architecture_overview_brainstorm.md  dev_workflow_desktop_to_pi.md  phase_10_progress.md  phase_10_safety_setup.md  phase_10_single_leg.md  phase_10_stage_a_plan.md  phase_10_stage_b_calibration_log.md  phase_10_stage_b_plan.md  phase_10_stage_b_test_commands.md  phase_10_stage_c_plan.md  phase_10_stage_c_test_commands.md  phase_10_stage_d_plan.md  phase_10_stage_d_test_commands.md  phase_10_stage_e_plan.md  phase_10_stage_e_test_commands.md  phase_10_stage_f_plan.md  phase_10_stage_f_test_commands.md  phase_10_stage_g_plan.md  phase_10_stage_i_plan.md  phase_11_param_gui.md  phase_11_pi_platform.md  phase_11_progress.md  phase_11_rqt_setup.md  phase_11_sim_tuning_workshop.md  phase_11_stage_a_plan.md  phase_11_stage_a_test_commands.md  phase_11_stage_b_plan.md  phase_11_stage_b_test_commands.md  phase_11_stage_c_plan.md  phase_11_stage_c_test_commands.md  phase_11_stage_d_plan.md  phase_11_stage_d_test_commands.md  phase_11_stage_e_plan.md  phase_11_stage_e_test_commands.md  phase_12_full_bringup.md  phase_12_pi_platform.md  (+88 more)
project_architecture/: 00_overview.md  ai_navigation.md  architecture.md  change_workflows.md  sim_capabilities.md  (+1 more)
src/hexapod_audio/: README.md  package.xml  setup.cfg  setup.py
src/hexapod_audio/config/: sound_map.yaml
src/hexapod_audio/hexapod_audio/: audio_node.py
src/hexapod_audio/test/: test_audio_node.py
src/hexapod_bringup/: CMakeLists.txt  README.md  package.xml
src/hexapod_bringup/config/: bridge_camera.yaml  bridge_foot_contact.yaml  bridge_imu.yaml
src/hexapod_bringup/launch/: always_on.launch.py  app_teleop.launch.py  bringup_ondemand.launch.py  camera.launch.py  ramp.launch.py  ramp_walk.launch.py  real.launch.py  rosbridge.launch.py  rubicon.launch.py  rubicon_walk.launch.py  sim.launch.py  slope.launch.py  step.launch.py  step_walk.launch.py  trench.launch.py  trench_walk.launch.py
src/hexapod_bringup/systemd/: hexapod_always_on.service  hexapod_rosbridge.service
src/hexapod_bringup/test/launch/: test_real_launch_loopback.py
src/hexapod_control/: CMakeLists.txt  README.md  package.xml
src/hexapod_control/config/: controllers.real.yaml  controllers.yaml
src/hexapod_gait/: .flake8  README.md  package.xml  setup.cfg  setup.py
src/hexapod_gait/config/presets/: README.md  aggressive_walk.yaml  current_state.yaml  defensive_walk.yaml  demo_walk.yaml  feet_closer_walk.yaml  hw_balance.yaml  hw_terrain.yaml  my_test_session.yaml  rubicon.yaml  sim_walk.yaml
src/hexapod_gait/hexapod_gait/: __init__.py  balance_controller.py  contact_diagnostic.py  foot_contact_viz.py  gait_engine.py  gait_node.py  gait_patterns.py  joint_load.py  pose_publisher.py  reachability_viz.py  sensor_health_monitor.py  slope_estimator.py  stand_node.py  support_monitor.py  tip_monitor.py  torque_viz.py  trajectory_gen.py
src/hexapod_gait/launch/: gait.launch.py  reachability_viz.launch.py  stand.launch.py  torque_viz.launch.py
src/hexapod_gait/test/: test_adaptive_stand.py  test_adaptive_stand_node.py  test_adaptive_touchdown.py  test_adaptive_touchdown_node.py  test_audio_cue.py  test_balance_controller.py  test_boot_belly.py  test_cartesian_standup.py  test_contact_diagnostic.py  test_foot_contact_node.py  test_foot_contact_viz.py  test_gait_engine_leveling.py  test_gait_patterns.py  test_hw_terrain_preset.py  test_joint_load.py  test_leg_gait_states.py  test_leveling_node.py  test_param_callback.py  test_recover.py  test_reposition.py  test_sensor_health_monitor.py  test_sensor_plausibility_node.py  test_show_node.py  test_show_pose.py  test_sitdown.py  test_sitdown_node.py  test_slip_detection_node.py  test_slope_estimator.py  test_stage_0_6_joint_limits.py  test_stance_switch.py  test_startup_ramp.py  test_step_height_modes_node.py  test_support_monitor.py  test_tip_monitor.py
src/hexapod_hardware/: CMakeLists.txt  README.md  hexapod_hardware.xml  package.xml
src/hexapod_hardware/config/: initial_poses.yaml  servo_mapping.yaml
src/hexapod_hardware/include/hexapod_hardware/: calibration.hpp  error_report_log.hpp  hexapod_system.hpp  serial_port.hpp  servo2040_protocol.hpp  servo2040_reader.hpp
src/hexapod_hardware/src/: calibration.cpp  error_report_log.cpp  hexapod_system.cpp  serial_port.cpp  servo2040_protocol.cpp  servo2040_reader.cpp
src/hexapod_hardware/test/: test_calibration.cpp  test_error_report_log.cpp  test_helpers.hpp  test_hexapod_system.cpp  test_initial_pose_preset.cpp  test_plugin_registration.cpp  test_serial_port.cpp  test_servo2040_protocol.cpp  test_servo2040_reader.cpp
src/hexapod_sensors/: README.md  package.xml  setup.cfg  setup.py
src/hexapod_sensors/config/: imu_calibration.yaml
src/hexapod_sensors/hexapod_sensors/: __init__.py  bno055_imu.py  foot_contact_publisher.py  imu_monitor.py  rpicam_node.py
src/hexapod_sensors/test/: test_bno055_imu.py  test_rpicam_node.py
(+238 files in other folders)
