<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch orchestration for the Hexapod. Combines Gazebo sim bringup (gz sim + RSP + spawn + bridge) with ros2_control spawners (JSB + 6 JTC) in a two-stage OnProcessExit sequence. From Phase 4 onwards the standard sim launcher; phase 3 hexapod_gazebo/sim.launch.py remains as plain-sim alternative.</description>
  <maintainer email="noreply@gmx.net">enjoykin-ua</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>hexapod_description</exec_depend>
  <exec_depend>hexapod_gazebo</exec_depend>
  <exec_depend>hexapod_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>hexapod_sensors</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
