<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_gait</name>
  <version>0.0.0</version>
  <description>
    Gait engine for the hexapod (Phase 5). Consumes hexapod_kinematics
    (pure-Python IK/FK) and publishes JointTrajectory commands to the
    leg_*_controller topics from Phase 4. Currently provides stand_node
    (Stufe C: one-shot stand pose); gait_node + gait_engine for
    tripod-walking come in Stufen E-G.
  </description>
  <maintainer email="noreply@gmx.net">enjoykin-ua</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>hexapod_kinematics</exec_depend>
  <!-- HW5v foot_contact_viz (auch von torque_viz/gait_node genutzt, bisher nur
       transitiv verfügbar; hier explizit deklariert). -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
