<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_hardware</name>
  <version>0.0.0</version>
  <description>
    ros2_control SystemInterface plugin for the hexapod. Speaks the
    Servo2040 USB-CDC protocol (COBS + CRC-16/CCITT-FALSE, see
    PROTOCOL.md in hexapod_servo_driver) and exposes 18 position
    command/state interfaces. Echo-state only — no real position
    feedback from the servos.
  </description>
  <maintainer email="andrej.kra@gmx.net">enjoykin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_manager</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/hexapod_hardware.xml"/>
  </export>
</package>
