<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_sensors</name>
  <version>0.0.0</version>
  <description>
    Sensor-Adapter für den Hexapod (Phase 5+). Sammelt Konversions-
    und Adapter-Knoten zwischen Sim-Sensor-Outputs (Gazebo) und der
    HW-Schnittstelle (Phase 7). Aktuell: foot_contact_publisher
    (Stufe D, Contacts -> Bool). Geplant: IMU-Adapter (Phase 6+).
  </description>
  <maintainer email="noreply@gmx.net">enjoykin-ua</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- bno055_imu (Stufe 6/IP1) importiert zur Laufzeit am Pi 'smbus2'. Bewusst
       KEIN rosdep-exec_depend (kein zuverlaessig aufloesbarer Key auf Ubuntu
       24.04). Bereitstellung dokumentiert in
       project_finalization/imu_balance/stage_6_hw_imu_test_commands.md (Schritt 1:
       apt-Paket python3-smbus2 ODER pip mit break-system-packages). Der Import
       ist lazy, damit Dev-Unit-Tests ohne smbus2 laufen. -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
